Req Approval Address

--- a/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
+++ b/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
@@ -10,8 +10,8 @@
 			<address-section borderRadius='20px'
 				wide='75%'></address-section>
 			<div class="white-space"></div>
-			<div id="label-total-produk">{{qtyproduk}} produk <span id="choosen-produk">"{{keyword}}"</span> di semua
-				Kategori
+			<div id="label-total-produk">{{qtyproduk}} produk <span id="choosen-produk">{{keyword}}</span> di
+				<span id="choosen-produk">{{namakategori}}</span>
 			</div>
 			<div class="white-space"></div>
 			<!-- *ngIf="IsWait" -->
