--- a/src/app/shared/components/footer-bar/footer-bar.component.html
+++ b/src/app/shared/components/footer-bar/footer-bar.component.html
@@ -9,7 +9,7 @@
 			id="footer-logo">
 	</div>
 
-	<div class="d-flex justify-content-around align-items-center">
+	<div class="d-flex justify-content-around align-items-center putih panjang">
 
 		<footer-feature image="../../../../assets/image/logo/ft1.png"
 			titleOne="Jaminan"
@@ -23,6 +23,7 @@
 			titleOne="Respon"
 			titleTwo="Cepat"></footer-feature>
 	</div>
-
-	<footer-customer-support></footer-customer-support>
+	<div class="d-flex justify-content-around align-items-center putih">
+		<footer-customer-support></footer-customer-support>
+	</div>
 </div>
