--- a/src/app/shared/components/footer-customer-support/footer-customer-support.component.html
+++ b/src/app/shared/components/footer-customer-support/footer-customer-support.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-start">
+<div class="d-flex justify-content-start putih">
 	<img id="cs_logo"
 		src="../../../../assets/image/logo/f-cs.png">
 	<!-- <div>
