--- a/src/app/shared/components/footer-bar/footer-bar.component.scss
+++ b/src/app/shared/components/footer-bar/footer-bar.component.scss
@@ -1,14 +1,10 @@
 @import '../../../../styles/variables/colors';
 
 #footer-bar-container {
-	// margin-top: 90px;
 	height: 200px;
-	// border: 0.5px solid $abu-abu-aspal;
 	box-shadow: 0px -1px 7px -2px rgba(0,0,0,0.4);
 	margin-top:2px;
-	// border: solid black 2px;
-	// background-color: $color-primary;
-background-color: $putih-tok;
+	background-color: $putih-tok;
 }
 
 .logos{
@@ -19,6 +15,16 @@ background-color: $putih-tok;
 	margin: 0px;
 	padding: 0px;
 	border: solid blue 1px;
+	
+}
+
+.putih{
+	background-color: $putih-tok;
+	height: 100%;
+}
+
+.panjang{
+	width:40%;
 }
 
 .feat{
