--- a/src/app/shared/components/footer-customer-support/footer-customer-support.component.scss
+++ b/src/app/shared/components/footer-customer-support/footer-customer-support.component.scss
@@ -1,5 +1,12 @@
+@import '../../../../styles/variables/colors';
+
 #cs_logo {
 	width: 200px;
 	height: 68px;
 	margin-right: 20px;
+}
+
+.putih{
+	background-color: $putih-tok;
+	height: 100%;
 }
