--- a/src/app/modules/cart2/pages/cart-layout/cart-layout.component.html
+++ b/src/app/modules/cart2/pages/cart-layout/cart-layout.component.html
@@ -1,3 +1,10 @@
 <div class="container d-flex">
-	Test
+
+	<div class="w-100 d-flex justify-content-center">
+		<div>
+			<wsv wide="20px"></wsv>
+			<empty-cart></empty-cart>
+		</div>
+	</div>
+
 </div>
