--- a/src/app/shared/components/footer-bar/footer-bar.component.html
+++ b/src/app/shared/components/footer-bar/footer-bar.component.html
@@ -4,7 +4,7 @@
 
 <div id="footer-bar-container"
 	class="d-flex justify-content-around align-items-center">
-	<div>
+	<div id="merah">
 		<img src="../../../../assets/image/logo/logofooter.svg"
 			id="footer-logo">
 	</div>
