--- a/src/app/modules/cart2/pages/cart-layout/cart-layout.component.html
+++ b/src/app/modules/cart2/pages/cart-layout/cart-layout.component.html
@@ -1,5 +1,5 @@
 <div class="container d-flex">
-
+	<div id="keranjang-label">KERANJANG</div>
 	<div class="w-100 d-flex justify-content-center">
 		<div>
 			<wsv wide="20px"></wsv>
