--- a/src/app/modules/cart2/components/item-card/item-card.component.scss
+++ b/src/app/modules/cart2/components/item-card/item-card.component.scss
@@ -9,4 +9,43 @@
 .rectangle-86 {
 	background: #ffffff;
 	border-radius: 10px;
+	padding-top: 10px;
+	padding-left: 10px;
+}
+
+.check-box-container {
+	width: 152px;
+}
+
+.header-wrapper {
+	padding-left: 15px;
+	padding-right: 15px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+.label-gray {
+	font-family: $primary-font;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 12px;
+	line-height: 16px;
+	color: #a9a9a9;
+}
+
+.label-gray-2 {
+	font-family: $primary-font;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 18px;
+
+	color: #606060;
+}
+
+.item-img {
+	width: 142px;
+	height: 92px;
+
+	object-fit: scale-down;
 }
