--- a/src/app/modules/cart2/pages/cart-layout/cart-layout.component.html
+++ b/src/app/modules/cart2/pages/cart-layout/cart-layout.component.html
@@ -18,6 +18,7 @@
 			<div>
 				<div *ngFor="let item of items">
 					<item-card [item]="item"></item-card>
+					<wsv wide="10px"></wsv>
 				</div>
 			</div>
 		</div>
