--- a/src/app/modules/cart2/components/item-card/item-card.component.html
+++ b/src/app/modules/cart2/components/item-card/item-card.component.html
@@ -23,9 +23,9 @@
 		<div id="item-desc-wrapper">
 			<item-desc [item]="item"></item-desc>
 			<wsv wide="6px"></wsv>
-			<div class="gray-label-3">Jumlah: {{item.quantity}} Barang</div>
+			<!-- <div class="gray-label-3">Jumlah: {{item.quantity}} Barang</div> -->
 		</div>
-
+		<wsh wide="90px"></wsh>
 	</div>
 
 
