--- a/src/app/modules/cart2/components/item-card/item-card.component.scss
+++ b/src/app/modules/cart2/components/item-card/item-card.component.scss
@@ -43,6 +43,14 @@
 	color: #606060;
 }
 
+.gray-label-3 {
+	font-family: $primary-font;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 12px;
+	color: #a9a9a9;
+}
+
 .item-img {
 	width: 142px;
 	height: 92px;
