--- a/src/app/shared/components/item-desc/item-desc.component.html
+++ b/src/app/shared/components/item-desc/item-desc.component.html
@@ -3,7 +3,7 @@
 </div>
 <wsv wide="6px"></wsv>
 <div id="item-price">
-	{{item.sell_price}}
+	{{item.sell_price|rupiah}}
 </div>
 <wsv wide="6px"></wsv>
 <div class="d-flex align-items-center">
