--- a/src/app/modules/cart2/pages/cart-layout/cart-layout.component.html
+++ b/src/app/modules/cart2/pages/cart-layout/cart-layout.component.html
@@ -17,7 +17,8 @@
 			</address-section>
 			<div>
 				<div *ngFor="let item of items">
-					<item-card [item]="item"></item-card>
+					<item-card [item]="item"
+						(onUpdateQty)="updateItemCartList($event)"></item-card>
 					<wsv wide="10px"></wsv>
 				</div>
 			</div>
