--- a/src/app/shared/components/box-cart-price/box-cart-price.component.html
+++ b/src/app/shared/components/box-cart-price/box-cart-price.component.html
@@ -90,7 +90,7 @@
 	<wsv wide="10px"></wsv>
 
 	<button type="button"
-		[className]="buttonDisable ? 'btn btn-price-next' : 'btn btn-price-abu2'"
+		[className]="buttonDisable ?  'btn btn-price-abu2':'btn btn-price-next' "
 		(click)="clickButtonLabel()">{{buttonLabel}}</button>
 </div>
 
