--- a/src/app/modules/cart2/components/item-card/item-card.component.html
+++ b/src/app/modules/cart2/components/item-card/item-card.component.html
@@ -1,7 +1,7 @@
 <div class="rectangle-87">
 	<div class="d-flex header-wrapper align-items-center">
 		<check-box-two [initialValue]="item.selected"
-			allowChanges="true"
+			[allowChanges]="item.enableSelection"
 			(onClickEvent)="handleClickCheckbox($event)"
 			class="check-box-container"></check-box-two>
 		<div class="d-flex flex-grow-1 justify-content-between">
