--- a/src/app/modules/transaction/components/item-transaction/item-transaction.component.html
+++ b/src/app/modules/transaction/components/item-transaction/item-transaction.component.html
@@ -41,7 +41,8 @@
 		<wsh wide="20px"></wsh>
 		<div class="col-1-trx-item">
 			<img id="image-item-trx"
-				[src]="item.product_image">
+				[src]="item.product_image"
+				(error)="onImgError($event)">
 		</div>
 		<wsh wide="30px"></wsh>
 		<div class="col-2-trx-item">
