--- a/src/app/modules/transaction/components/item-transaction/item-transaction.component.html
+++ b/src/app/modules/transaction/components/item-transaction/item-transaction.component.html
@@ -31,7 +31,7 @@
 		</div>
 		<div class="col-4-trx-item">
 			<red-border-white-bg-button label="Lihat Detail"
-				(click)="viewDetail()"></red-border-white-bg-button>
+				(click)="viewDetail(item)"></red-border-white-bg-button>
 		</div>
 		<wsh wide="20px"></wsh>
 	</div>
