--- a/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.html
+++ b/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.html
@@ -21,6 +21,7 @@
 				<wsh wide="57px"></wsh>
 				<box-cart-price [pertotalan]="pertotalan"
 					[selectedItems]="selectedItems"
+					[buttonDisable]="false"
 					buttonLabel="Request Approval"
 					(buttonBoxCartPriceClick)="selanjutnyaClick()"></box-cart-price>
 			</div>
