--- a/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
@@ -107,7 +107,7 @@
 					<box-cart-price [selectedItems]="selectedItems"
 						[pertotalan]="pertotalan"
 						[buttonLabel]="buttonSelanjutnyaLabel()"
-						[buttonDisable]="!cartIsEmpty()"
+						[buttonDisable]="cartIsEmpty()"
 						(buttonBoxCartPriceClick)="selanjutnyaClick()"></box-cart-price>
 				</div>
 
