Perbaikan tampilan (Reposisi) pada halaman Transaksi & Cart, Default null image di detail produk, serta fitur Cari Sejenis pada Halaman Transaksi

--- a/src/app/modules/cart2/components/empty-cart/empty-cart.component.html
+++ b/src/app/modules/cart2/components/empty-cart/empty-cart.component.html
@@ -13,7 +13,8 @@
 	<div class="d-flex justify-content-center">
 		<div class="btn-empty-cart">
 			<button type="button"
-				class="btn btn-cart-empty">Mulai Belanja</button>
+				class="btn btn-cart-empty"
+				(click)="mulaiBelanja()">Mulai Belanja</button>
 		</div>
 	</div>
 </div>
