--- a/src/app/modules/detail-product/components/image-main/image-main.component.html
+++ b/src/app/modules/detail-product/components/image-main/image-main.component.html
@@ -2,8 +2,12 @@
 	<div id="image-main"
 		[ngStyle]="stylesObj"
 		(click)="openDialogImage(productDetail?.product_image)">
-		<img id="detail-main-image"
-			src={{productDetail?.product_image}}>
+
+
+		<img [src]="productDetail.product_image"
+			class="card-img-top"
+			id="detail-main-image"
+			(error)="onImgError($event)">
 	</div>
 	<wsv wide="10px"></wsv>
 	<div id="image-grid">
