--- a/src/app/modules/transaction/components/item-transaction/item-transaction.component.html
+++ b/src/app/modules/transaction/components/item-transaction/item-transaction.component.html
@@ -101,8 +101,9 @@
 					</ng-template>
 
 					<ng-template #sixth>
+						<!-- {{item | json}} -->
 						<red-bg-button label="Cari Sejenis"
-							(click)="carisejenis()"></red-bg-button>
+							(click)="carisejenis(item)"></red-bg-button>
 					</ng-template>
 
 				</ng-template>
