Revisi tampilan cart - pilih semua

--- a/src/app/modules/cart2/components/pilih-semua/pilih-semua.component.html
+++ b/src/app/modules/cart2/components/pilih-semua/pilih-semua.component.html
@@ -3,5 +3,5 @@
 		[allowChanges]="true"
 		(onClickEvent)="handleClickCheckbox($event)"
 		class="check-box-container"></check-box-two>
-	<div>Pilih Semua</div>
+	<div class="pilihsemua">Pilih Semua</div>
 </div>
