--- a/src/app/modules/request-approval/components/item-list/item-list.component.scss
+++ b/src/app/modules/request-approval/components/item-list/item-list.component.scss
@@ -5,6 +5,16 @@
 	background: $putih-tok;
 	border-radius: 8px;
 	width: 703px;
+  padding: 14px;
+  margin-top: -5%;
+  z-index: 999;
+}
+
+.grey-rounded-corner-header-card{
+  background: #EEEEEE;
+  border-radius: 10px;
+  height: 100px;
+	width: 703px;
 	padding: 14px;
 }
 
@@ -12,6 +22,43 @@
 	font-family: $primary-font;
 	font-weight: 600;
 	font-size: 12px;
-
 	color: $abu-abu-gelap;
+}
+
+.text-header-card{
+  line-height: 10px;
+}
+
+.text-header-card-2{
+  text-align: right;
+}
+
+.title-text-header-card{
+font-size: 14px;
+font-style: normal;
+font-weight: 700;
+line-height: 18px;
+letter-spacing: 0em;
+text-align: left;
+color: #606060;
+}
+
+.title-text-header-card-2{
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #606060;
+}
+
+.sub-text-header-card{
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #606060;
 }
