--- a/src/app/modules/transaction-detail/components/process-logo/process-logo.component.html
+++ b/src/app/modules/transaction-detail/components/process-logo/process-logo.component.html
@@ -3,8 +3,8 @@
 		class="horizontal-line"></div>
 	<img [src]="image">
 </div>
-
-<div class="label-1 d-flex w-100 justify-content-center">{{date|tanggal}}</div>
+<wsv wide="5px"></wsv>
+<div class="label-1 d-flex w-100 justify-content-center">{{date|tanggal:'tgl'}}</div>
 
 
 <!-- <img src="../../../../../assets/image/icons/dikirim-grey.svg">
