--- a/src/app/modules/transaction/components/item-transaction/item-transaction.component.scss
+++ b/src/app/modules/transaction/components/item-transaction/item-transaction.component.scss
@@ -6,7 +6,7 @@
 	background: #eeeeee;
 	border-radius: 10px;
 	padding-top: 10px;
-	margin-top:15px;
+	margin-top: 15px;
 }
 
 #item-content {
@@ -70,10 +70,9 @@
 	color: #bebebe;
 }
 
-
 #button-wrapper {
-	background: #E0E0E0;
-	border: 0.5px solid #E0E0E0;
+	background: #e0e0e0;
+	border: 0.5px solid #e0e0e0;
 	box-sizing: border-box;
 	border-radius: 57px;
 	width: 129px;
@@ -86,5 +85,9 @@
 	display: flex;
 	align-items: center;
 	text-align: center;
-	color: #BDBDBD;
+	color: #bdbdbd;
+}
+
+.coret {
+	text-decoration-line: line-through;
 }
