--- a/src/app/modules/pilih-produk/components/filter-card/filter-card.component.scss
+++ b/src/app/modules/pilih-produk/components/filter-card/filter-card.component.scss
@@ -1,5 +1,8 @@
 @import '../../../../../styles/variables/colors';
 
+#Terapkan{
+ float: right;
+}
 #filter-card-container {
 	padding-top: 60px;
 	padding-left: 34px;
@@ -88,5 +91,5 @@
 }
 
 .white-space {
-	height: 70px;
+	height: 20px;
 }
