--- a/src/app/modules/account/components-kelola-purchaser/add-purchaser-editor/add-purchaser-editor.component.html
+++ b/src/app/modules/account/components-kelola-purchaser/add-purchaser-editor/add-purchaser-editor.component.html
@@ -1,11 +1,11 @@
 <div class="d-flex">
-	<div class="label-1">
-		Nama Depan
-	</div>
-	<div>
-		<input type="text"
-			class="textbox-search">
-	</div>
+  <div class="label-1">
+    Nama Depan
+  </div>
+  <div>
+    <input type="text"
+      class="textbox-search">
+  </div>
 </div>
 
 <wsv wide="24px"></wsv>
@@ -13,28 +13,34 @@
 <wsv wide="24px"></wsv>
 
 <div class="d-flex">
-	<div class="label-1">
-		Nama Belakang
-	</div>
-	<div>
-		<input type="text"
-			class="textbox-search">
-	</div>
+  <div class="label-1">
+    Nama Belakang
+  </div>
+  <div>
+    <input type="text"
+      class="textbox-search">
+  </div>
 </div>
 <wsv wide="24px"></wsv>
 <horizontal-line></horizontal-line>
 <wsv wide="24px"></wsv>
 
 <div class="d-flex">
-	<div class="label-1">
-		Email
-	</div>
-	<div>
-		<input type="text"
-			class="textbox-search">
-	</div>
+  <div class="label-1">
+    Email
+  </div>
+  <div>
+    <input type="text"
+      class="textbox-search">
+  </div>
 </div>
 <wsv wide="24px"></wsv>
 <horizontal-line></horizontal-line>
 <wsv wide="24px"></wsv>
-<red-bg-button label="Tambah"></red-bg-button>
+<red-button label="Tambah"
+  font="14px"
+  paddingtop="10px"
+  paddingbottom="10px"
+  paddingleft="0px"
+  paddingright="0px"
+  float="right"></red-button>
