--- a/src/app/modules/pilih-produk/components/filter-card/filter-card.component.html
+++ b/src/app/modules/pilih-produk/components/filter-card/filter-card.component.html
@@ -1,36 +1,46 @@
 <div id="filter-card-container">
-	<div id="filter-label">Filter</div>
-	<!-- <div id="filter-label-2">Lokasi</div>
+  <div id="filter-label">Filter</div>
+  <!-- <div id="filter-label-2">Lokasi</div>
 	<div class="d-flex justify-content-center align-items-center">
 		<input type="text"
 			class="textbox-search-with-logo"
 			placeholder="Cari Lokasi">
-	</div> 
+	</div>
 	<div class="filter-card-underline"></div>-->
-	<div id="filter-label-2">Harga</div>
-	<input id="minimum-input"
-		type="number"
-		class="textbox-search"
-		placeholder="Minimum"
-		(keyup.enter)="carilagi(minimum.value,maximum.value)"
-		autocomplete="off"
-		#minimum>
-	<div class="filter-card-underline"></div>
-	<input id="maximum-input"
-		type="number"
-		class="textbox-search"
-		placeholder="Maximum"
-		(keyup.enter)="carilagi(minimum.value,maximum.value)"
-		autocomplete="off"
-		#maximum>
+  <div id="filter-label-2">Harga</div>
+  <input id="minimum-input"
+    type="number"
+    class="textbox-search"
+    placeholder="Minimum"
+    (keyup.enter)="carilagi(minimum.value,maximum.value)"
+    autocomplete="off"
+    #minimum>
+  <div class="filter-card-underline"></div>
+  <input id="maximum-input"
+    type="number"
+    class="textbox-search"
+    placeholder="Maximum"
+    (keyup.enter)="carilagi(minimum.value,maximum.value)"
+    autocomplete="off"
+    #maximum>
 
-	<div class="filter-card-underline"></div>
+  <div class="filter-card-underline"></div>
 
-	<div class="white-space"></div>
-	<div id="Terapkan button"
+  <div class="white-space"></div>
+  <red-button id="Terapkan button"
+    class="red-button"
+    label="Terapkan"
+    font="14px"
+    paddingtop="10px"
+    paddingbottom="10px"
+    paddingleft="0px"
+    paddingright="0px"
+    float="right"
+    (click)="carilagi(minimum.value,maximum.value)"></red-button>
+  <!-- <div id="Terapkan button"
 		class="red-button"
-		(click)="carilagi(minimum.value,maximum.value)">Terapkan</div>
-	<!-- 
+		(click)="carilagi(minimum.value,maximum.value)">Terapkan</div> -->
+  <!--
 	<button (click)="carilagi(minimum.value,maximum.value)"
 		class="red-button">Terapkan</button> -->
 
