add component custom button red

--- a/src/app/shared/components/red-button/red-button.component.html
+++ b/src/app/shared/components/red-button/red-button.component.html
@@ -5,6 +5,7 @@
   [style.padding-top]="paddingtop"
   [style.padding-left]="paddingleft"
   [style.padding-right]="paddingright"
-  [style.float]="float">
+  [style.float]="float"
+  [style.width]="width">
   {{label}}
 </div>
