add component custom red button

--- a/src/app/modules/account/components-info-perusahaan/set-utama-button/set-utama-button.component.html
+++ b/src/app/modules/account/components-info-perusahaan/set-utama-button/set-utama-button.component.html
@@ -9,6 +9,7 @@
   class="d-flex"
   label="Set Utama"
   font="12px"
+  width="140px"
   paddingtop="0px"
   paddingbottom="0px"
   paddingleft="0px"
