--- a/src/app/modules/account/pages/account-info-perusahaan/account-info-perusahaan.component.html
+++ b/src/app/modules/account/pages/account-info-perusahaan/account-info-perusahaan.component.html
@@ -6,6 +6,7 @@
   <red-button label="+ Tambah Alamat"
     font="14px"
     paddingtop="10px"
+    width="140px"
     paddingbottom="10px"
     paddingleft="0px"
     paddingright="0px"
