--- a/src/app/layout/components/login-card/login-card.component.html
+++ b/src/app/layout/components/login-card/login-card.component.html
@@ -1,120 +1,121 @@
 <div class="d-flex flex-column bd-highlight mb-3">
-	<wsv wide="50px"></wsv>
-	<block-ui>
-		<mat-horizontal-stepper [linear]="isLinear"
-			style="width:95%;border-radius: 80px;"
-			#stepper>
+  <wsv wide="50px"></wsv>
+  <block-ui>
+    <mat-horizontal-stepper [linear]="isLinear"
+      style="width:95%;border-radius: 80px;"
+      #stepper>
 
 
-			<mat-step [stepControl]="firstFormGroup"
-				[completed]="isCompleted">
-				<form [formGroup]="firstFormGroup">
-					<div class="p-2 bd-highlight teks"><img src="../../../../assets/image/icons/login.svg"></div>
-					<wsv wide="10px"></wsv>
-					<div class="p-2 bd-highlight teksbesar">Log In</div>
-					<wsv wide="15px"></wsv>
-					<div class="p-2 bd-highlight teks">Kami akan mengirimkan OTP ke alamat email anda</div>
-					<wsv wide="50px"></wsv>
-					<div class="p-2 bd-highlight teks">Masukkan Alamat Email Anda</div>
+      <mat-step [stepControl]="firstFormGroup"
+        [completed]="isCompleted">
+        <form [formGroup]="firstFormGroup">
+          <div class="p-2 bd-highlight teks"><img src="../../../../assets/image/icons/login.svg"></div>
+          <wsv wide="10px"></wsv>
+          <div class="p-2 bd-highlight teksbesar">Log In</div>
+          <wsv wide="15px"></wsv>
+          <div class="p-2 bd-highlight teks">Kami akan mengirimkan OTP ke alamat email anda</div>
+          <wsv wide="50px"></wsv>
+          <div class="p-2 bd-highlight teks">Masukkan Alamat Email Anda</div>
 
-					<div class="p-2 bd-highlight">
-						<input type="text"
-							class="form-control"
-							placeholder="Alamat Email"
-							aria-label="Email"
-							aria-describedby="basic-addon1"
-							formControlName="email"
-							ngModel
-							required>
-					</div>
-					<div class="p-2 bd-highlight">
-						<button id="loginbutton"
-							[ngClass]="!firstFormGroup.valid ? 'disab' : 'enab'"
-							mat-button
-							matStepperNext
-							(click)="sendotp()">
-							Get OTP
-						</button>
+          <div class="p-2 bd-highlight">
+            <input type="text"
+              class="form-control"
+              placeholder="Alamat Email"
+              aria-label="Email"
+              aria-describedby="basic-addon1"
+              formControlName="email"
+              ngModel
+              required>
+          </div>
+          <div class="p-2 bd-highlight">
+            <button id="loginbutton"
+              [ngClass]="!firstFormGroup.valid ? 'disab' : 'enab'"
+              mat-button
+              matStepperNext
+              (click)="sendotp()">
+              Get OTP
+            </button>
 
-					</div>
-					<div class="p-2 bd-highlight warning">
-						{{errlogin}}
-					</div>
-				</form>
-			</mat-step>
-
-
-			<mat-step [stepControl]="secondFormGroup">
-				<form [formGroup]="secondFormGroup">
-
-					<div class="p-2 bd-highlight teks"><img src="../../../../assets/image/icons/login-otp.svg"></div>
-					<wsv wide="10px"></wsv>
-					<div class="p-2 bd-highlight teksbesar">Verifikasi OTP</div>
-					<wsv wide="15px"></wsv>
-					<div class="p-2 bd-highlight teks">Masukkan Nomor OTP yang sudah dikirim ke <b>{{emailnya}}</b>
-					</div>
-					<wsv wide="20px"></wsv>
-					<div class="p-2 bd-highlight teks">
+          </div>
+          <div class="p-2 bd-highlight warning">
+            {{errlogin}}
+          </div>
+        </form>
+      </mat-step>
 
 
-						<ng-otp-input (onInputChange)="onOtpChange($event,emailnya)"
-							[config]="{length:6}"></ng-otp-input>
+      <mat-step [stepControl]="secondFormGroup">
+        <form [formGroup]="secondFormGroup">
+
+          <div class="p-2 bd-highlight teks"><img src="../../../../assets/image/icons/login-otp.svg"></div>
+          <wsv wide="10px"></wsv>
+          <div class="p-2 bd-highlight teksbesar">Verifikasi OTP</div>
+          <wsv wide="15px"></wsv>
+          <div class="p-2 bd-highlight teks">Masukkan Nomor OTP yang sudah dikirim ke <b>{{emailnya}}</b>
+          </div>
+          <wsv wide="20px"></wsv>
+          <div class="p-2 bd-highlight teks">
 
 
-					</div>
+            <ng-otp-input (onInputChange)="onOtpChange($event,emailnya)"
+              [config]="{length:6}"></ng-otp-input>
 
-					<div class="p-2 bd-highlight">
-						Tidak Terima Nomor OTP? <span class='grey'
-							[ngStyle]="{'display':display}">Kirim Ulang</span>
-						<span class='kirimulang'
+
+          </div>
+
+          <div class="p-2 bd-highlight">
+            Tidak Terima Nomor OTP? <span class='grey'
+              (click)="sendotp()"
+              [ngStyle]="{'display':display}">Kirim Ulang</span>
+            <!-- <span class='kirimulang'
 							(click)="sendotp()"
-							[ngStyle]="{'display':tampil}">Kirim Ulang</span>
-						&nbsp;
-						<countdown [config]="naconfig"
-							(event)="finishCount($event)"
-							[ngStyle]="{'font-weight': '600','font-size':'22px','line-height': '30px','color':'#DB0A2A'}">
-						</countdown>
+							[ngStyle]="{'display':tampil}">Kirim Ulang</span> -->
+            &nbsp;
+            <countdown [config]="naconfig"
+              (event)="finishCount($event)"
+              [ngStyle]="{'font-weight': '600','font-size':'22px','line-height': '30px','color':'#DB0A2A'}">
+            </countdown>
 
 
-					</div>
+          </div>
 
-					<div class="p-2 bd-highlight kecil">
-						Harap periksa di inbox / junk email anda
+          <div class="p-2 bd-highlight kecil">
+            Harap periksa di inbox / junk email anda
 
-					</div>
+          </div>
 
-					<div class="p-2 bd-highlight">
-						<button mat-button
-							matStepperNext
-							id="loginbutton"
-							(click)="submit()"
-							[ngClass]="!secondFormGroup.valid ? 'enab' : 'enab'">
-							Verifikasi dan Proses
-						</button>
-						<input type="hidden"
-							formControlName="password"
-							ngModel
-							required>
-						<input type="hidden"
-							formControlName="email"
-							ngModel
-							required>
+          <div class="p-2 bd-highlight">
+            <button mat-button
+              matStepperNext
+              id="loginbutton"
+              (click)="submit()"
+              [ngClass]="!secondFormGroup.valid ? 'enab' : 'enab'">
+              Verifikasi dan Proses
+            </button>
+            <input type="hidden"
+              formControlName="password"
+              ngModel
+              required>
+            <input type="hidden"
+              formControlName="email"
+              ngModel
+              required>
 
-					</div>
+          </div>
 
-					<div class="p-2 bd-highlight warning">
-						{{errotp}}
-					</div>
-				</form>
-			</mat-step>
+          <div class="p-2 bd-highlight warning">
+            {{errotp}}
+          </div>
+        </form>
+      </mat-step>
 
-		</mat-horizontal-stepper>
-	</block-ui>
+    </mat-horizontal-stepper>
+  </block-ui>
 
 </div>
 
 
-<!-- 
+<!--
 <div class="d-flex flex-column bd-highlight mb-3">
 	<div class="p-2 bd-highlight login-card">
 	<mat-card>
@@ -124,11 +125,11 @@
 			<div class="d-flex">
 				<div class="logo mx-auto mt-5">
 					<div class="input-group mb-3">
-						
+
 					</div>
 
 					<div class="input-group mb-3">
-						
+
 					</div>
 				</div>
 
@@ -138,6 +139,6 @@
 </div>
 
 	<div class="p-2 bd-highlight">
-		
+
 	</div>
 </div> -->
