bugs fixing kirim ulang otp

--- a/src/app/layout/components/login-card/login-card.component.html
+++ b/src/app/layout/components/login-card/login-card.component.html
@@ -67,9 +67,9 @@
             Tidak Terima Nomor OTP? <span class='grey'
               (click)="sendotp()"
               [ngStyle]="{'display':display}">Kirim Ulang</span>
-            <!-- <span class='kirimulang'
-							(click)="sendotp()"
-							[ngStyle]="{'display':tampil}">Kirim Ulang</span> -->
+            <span class='kirimulang'
+              (click)="sendotp()"
+              [ngStyle]="{'display':tampil}">Kirim Ulang</span>
             &nbsp;
             <countdown [config]="naconfig"
               (event)="finishCount($event)"
