Detail Transaksi, Bagian status proses

--- a/src/app/modules/transaction-detail/components/status-pembelian/status-pembelian.component.html
+++ b/src/app/modules/transaction-detail/components/status-pembelian/status-pembelian.component.html
@@ -42,6 +42,7 @@
 		<div class="label-1 ">
 			Alamat Pengiriman:
 		</div>
+		<wsv wide="10px"></wsv>
 		<div class="label-3">{{item?.delivery_address_json.recipient_name}}</div>
 		<div class="label-3">{{item?.delivery_address_json.address_name}}</div>
 		<div class="label-5">{{item?.delivery_address_json.address_detail}},
@@ -50,6 +51,7 @@
 			{{item?.delivery_address_json.district}},
 			{{item?.delivery_address_json.province}},
 			{{item?.delivery_address_json.zipcode}}
+			{{item?.delivery_address_json.phone}}
 		</div>
 
 	</div>
