--- a/src/app/modules/transaction-detail/components/process-logo/process-logo.component.html
+++ b/src/app/modules/transaction-detail/components/process-logo/process-logo.component.html
@@ -4,7 +4,7 @@
 	<img [src]="image">
 </div>
 
-<div class="label-1 d-flex w-100 justify-content-center">{{date|tanggal}}</div>
+<div class="label-1 d-flex w-100 justify-content-center">{{date|tanggal : 'tgl'}}</div>
 
 
 <!-- <img src="../../../../../assets/image/icons/dikirim-grey.svg">
