--- a/src/app/modules/transaction-detail/pages/transaction-detail-layout/transaction-detail-layout.component.html
+++ b/src/app/modules/transaction-detail/pages/transaction-detail-layout/transaction-detail-layout.component.html
@@ -14,11 +14,11 @@
 						<status-label [status]="item?.status"></status-label>
 					</div>
 					<wsv wide="15px"></wsv>
-					<div class="d-flex justify-content-between">
+					<div class="d-flex justify-content-between pas">
 						<div>
 							<div class="label-1">Tgl. Pemesanan</div>
 							<wsv wide="3px"></wsv>
-							<div class="label-2">{{item?.requested_at|tanggal}}</div>
+							<div class="label-2">{{item?.requested_at|tanggal : 'tgl'}}</div>
 						</div>
 						<div>
 							<div class="label-1">No. Pemesanan</div>
