--- a/src/app/modules/transaction/components/item-transaction/item-transaction.component.html
+++ b/src/app/modules/transaction/components/item-transaction/item-transaction.component.html
@@ -18,7 +18,7 @@
 				{{item.delivery_address_json.address_name}}
 			</div>
 			<div class="title-2">
-				{{item.requested_at |tanggal}}
+				{{item.requested_at |tanggal : 'tgl'}}
 			</div>
 		</div>
 		<div class="col-3-trx-item flex-grow-1">
