--- a/src/app/modules/account/components/info-perusahaan-address-card/info-perusahaan-address-card.component.html
+++ b/src/app/modules/account/components/info-perusahaan-address-card/info-perusahaan-address-card.component.html
@@ -1,20 +1,19 @@
 <div class="info-perusahaan-card-wrapper d-flex">
 	<div class="flex-grow-1">
 		<div id="perusahaan-label">
-			Narindo Solusi Telekomunikasi
+			{{address?.address_name}}
 		</div>
 		<wsv wide="12px"></wsv>
 		<horizontal-line></horizontal-line>
 		<wsv wide="12px"></wsv>
 		<div class="d-flex">
 			<name-address class="flex-even"
-				title="Ronnie H"
-				content="Jl. Boulevard Raya, Graha Boulevard No C-12, Kelapa Gading, Jakarta Utara 14320 Telepon/Handphone 08123456789">
-			</name-address>
+				[title]="address?.recipient_name"
+				[content]="getAddress()"></name-address>
 			<wsh wide="25px"></wsh>
 			<name-address class="flex-even"
 				title="Catatan Pengiriman"
-				content="titip di resepsionis"></name-address>
+				[content]="address?.delivery_message"></name-address>
 		</div>
 	</div>
 	<div class="d-flex">
