--- a/src/app/modules/account/pages/account-info-perusahaan/account-info-perusahaan.component.html
+++ b/src/app/modules/account/pages/account-info-perusahaan/account-info-perusahaan.component.html
@@ -1,17 +1,19 @@
 <wsv wide="28px"></wsv>
 <div class="d-flex justify-content-between align-items-center">
-  <div class="label-title">
-    Informasi Perusahaan
-  </div>
-  <red-button label="+ Tambah Alamat"
-    font="14px"
-    paddingtop="10px"
-    width="140px"
-    paddingbottom="10px"
-    paddingleft="0px"
-    paddingright="0px"
-    float="right"
-    (click)="tambahAlamat()"></red-button>
+	<div class="label-title">
+		Informasi Perusahaan
+	</div>
+	<red-button label="+ Tambah Alamat"
+		font="14px"
+		paddingtop="10px"
+		width="140px"
+		paddingbottom="10px"
+		paddingleft="0px"
+		paddingright="0px"
+		float="right"
+		(click)="tambahAlamat()"></red-button>
 </div>
 <wsv wide="24px"></wsv>
-<info-perusahaan-address-list></info-perusahaan-address-list>
+<div *ngFor="let address of addresses">
+	<info-perusahaan-address-card [address]="address"></info-perusahaan-address-card>
+</div>
